# got-it

./: .gitignore  package.json  pnpm-lock.yaml
client/: example-response.json  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: app.tsx  layout.tsx  main.tsx  page.tsx  router.tsx  step3.tsx
client/src/app/: layout.tsx
client/src/app/dashboard/: dashboard-home.tsx
client/src/app/scheduler/: layout.tsx  page.tsx  scheduler-layout.tsx  scheduler-wizard.tsx  scheduler.tsx
client/src/app/scheduler/result/: page.tsx
client/src/app/scheduler/step1/: page.tsx
client/src/app/scheduler/step2/: page.tsx
client/src/app/scheduler/wizard/: step1.tsx  step2.tsx  step3.tsx
client/src/components/: app-sidebar.tsx  breadcrumbs.tsx  theme-provider.tsx
client/src/components/ui/: date-picker.tsx  sidebar.tsx
client/src/types/: formStoreTypes.ts
server/: Cargo.toml  Makefile.toml
server/src/: book.rs  data.rs  lib.rs  main.rs
src/components/: app-sidebar.tsx
vite/src/: main.tsx
vite/src/app/: layout.tsx
vite/src/app/dashboard/: dashboard-home.tsx
vite/src/app/jobs/: jobs.tsx
vite/src/app/scheduler/wizard/: result.tsx  step1.tsx  step2.tsx
vite/src/components/: app-sidebar.tsx
