[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = {version="1.0.217", features=['derive']}
serde_json = "1.0.135"
tokio = {version="1.43.0", features=["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]}
